[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/pages/game_hud/game_hud.gd" type="Script" id=1]
[ext_resource path="res://ui/pages/game_hud/collectible_viewer.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/touch_hud.gd" type="Script" id=3]
[ext_resource path="res://ui/standard_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/touch/joystick.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/touch/pan_panel.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/textures/jump_button.png" type="Texture" id=8]

[sub_resource type="OpenSimplexNoise" id=4]

[sub_resource type="NoiseTexture" id=5]
noise = SubResource( 4 )

[sub_resource type="CanvasItemMaterial" id=6]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 7 )
fill_from = Vector2( 0, 0.5925 )
fill_to = Vector2( 0, 0 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 50, 50 )

[node name="GameHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 5 )
expand = true
stretch_mode = 1

[node name="NextLevelUI" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="NextLevelUI"]
modulate = Color( 1, 1, 1, 0.670588 )
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 8 )
expand = true
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="NextLevelUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NextLevelUI/MarginContainer"]
margin_top = 222.0
margin_right = 1000.0
margin_bottom = 377.0
mouse_filter = 2
size_flags_vertical = 4
custom_constants/separation = 50
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="NextLevelUI/MarginContainer/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 64.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NextLevelUI/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 1000.0
margin_bottom = 64.0
mouse_filter = 2

[node name="Control" type="Control" parent="NextLevelUI/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 188.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="CollectionExplanation" type="RichTextLabel" parent="NextLevelUI/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 192.0
margin_right = 807.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.27
custom_constants/shadow_offset_x = 0
text = "Collect all the CDs to proceed to the next level"
fit_content_height = true
scroll_active = false

[node name="Control2" type="Control" parent="NextLevelUI/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 811.0
margin_right = 1000.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="NextLevelUI/MarginContainer/VBoxContainer"]
margin_left = 75.0
margin_top = 114.0
margin_right = 925.0
margin_bottom = 155.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 8
custom_constants/separation = 50

[node name="PrevLevelButton" parent="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_right = 250.0
rect_min_size = Vector2( 250, 41 )

[node name="TextureRect" parent="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/PrevLevelButton/Scaler" index="0"]
rect_min_size = Vector2( 250, 41 )

[node name="Label" parent="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/PrevLevelButton/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 250.0
text = "Previous LEvel"

[node name="NextLevelButton" parent="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_left = 300.0
margin_right = 550.0
rect_min_size = Vector2( 250, 41 )

[node name="TextureRect" parent="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/NextLevelButton/Scaler" index="0"]
rect_min_size = Vector2( 250, 41 )

[node name="Label" parent="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/NextLevelButton/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 250.0
text = "Next Level"

[node name="GameEndButton" parent="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_left = 600.0
margin_right = 850.0
rect_min_size = Vector2( 250, 41 )

[node name="TextureRect" parent="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/GameEndButton/Scaler" index="0"]
rect_min_size = Vector2( 250, 41 )

[node name="Label" parent="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/GameEndButton/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 250.0
text = "End Game"

[node name="TouchHUD" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Control" type="Control" parent="TouchHUD"]
anchor_left = 0.13
anchor_top = 0.8
anchor_right = 0.13
anchor_bottom = 0.8
grow_vertical = 0
mouse_filter = 2

[node name="Analog" parent="TouchHUD/Control" instance=ExtResource( 6 )]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 130, 130 )
joy_stick_ratio = 1.053

[node name="PanPanel" parent="TouchHUD" instance=ExtResource( 7 )]
anchor_left = 0.37

[node name="VBoxContainer" type="VBoxContainer" parent="TouchHUD"]
anchor_left = 1.0
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.7
margin_right = -116.0
grow_horizontal = 0
mouse_filter = 2
alignment = 2

[node name="Control" type="Control" parent="TouchHUD/VBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="TouchHUD/VBoxContainer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="TouchHUD/VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="Control" type="Control" parent="TouchHUD/VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Jump" type="TouchScreenButton" parent="TouchHUD/VBoxContainer/Control/Control"]
shape = SubResource( 9 )
action = "character_jump"

[node name="ButtonInputBlocker" type="Control" parent="TouchHUD/VBoxContainer/Control/Control/Jump"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Collectibles" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
margin_left = 40.0
margin_top = 20.0
margin_right = 175.0
margin_bottom = 560.0
mouse_filter = 2
size_flags_horizontal = 0

[node name="MenuButton" parent="MarginContainer/Collectibles" instance=ExtResource( 5 )]
margin_right = 120.0

[node name="TextureRect" parent="MarginContainer/Collectibles/MenuButton/Scaler" index="0"]
rect_min_size = Vector2( 120, 41 )

[node name="Label" parent="MarginContainer/Collectibles/MenuButton/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 120.0
text = "Options"

[node name="CDs" parent="MarginContainer/Collectibles" instance=ExtResource( 2 )]
margin_top = 45.0
margin_right = 135.0
margin_bottom = 95.0

[node name="TimerLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
margin_left = 388.0
margin_top = 20.0
margin_right = 612.0
margin_bottom = 51.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_colors/font_color = Color( 0.0862745, 0.54902, 0.337255, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "TIME LEFT : 60 s"

[connection signal="pressed" from="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/PrevLevelButton" to="." method="_on_PrevLevelButton_pressed"]
[connection signal="pressed" from="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/GameEndButton" to="." method="_on_GameEndButton_pressed"]
[connection signal="pressed" from="MarginContainer/Collectibles/MenuButton" to="." method="_on_MenuButton_pressed"]

[editable path="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/PrevLevelButton"]
[editable path="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/NextLevelButton"]
[editable path="NextLevelUI/MarginContainer/VBoxContainer/HBoxContainer/GameEndButton"]
[editable path="MarginContainer/Collectibles/MenuButton"]
